2010-06-17  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/ClipboardTest.cs: Remove [MoonlightBug]
	sine Toshok implemented Clipboard

2010-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* System/EnvironmentTest.cs: Update version number to latest
	SL4 release

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/DeploymentTest.cs
	* System.Windows/IconTest.cs:
	* System.Windows/OutOfBrowserSettingsTest.cs: 
	* System.Windows/SecuritySettingsTest.cs:
	* System.Windows/WindowSettingsTest.cs:
		Ensure we can't set some properties once deployment 
		initialization is complete
	* misc/DefaultValues.cs: Remove some [MoonlightBug]

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/ApplicationTest.cs: Install return false if
	not called from a user-initiated event.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Implment INCC
	  properly for the Items collection. I can't believe no tests
	  every checked this :)

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs:
	* System.Windows/DependencyPropertyTest.cs: Update our
	  implementation of mentors to allow us to listen for changes
	  to the mentor and correctly NULL it out when the mentor is
	  destroyed as if we were to ref the mentor we'd create a
	  cycle.

2010-06-01  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/ClipboardTest.cs: New. Test user initiation
	requirement to access clipboard

2010-06-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Implement the first
	  section of mentor based databinding. When doing DataContext
	  based bindings on DependencyObjects, we get the DataContext
	  from the first FrameworkElement in the actual tree (not
	  visual tree). This FE is known as the 'mentor'. 

2010-05-31  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Media/CaptureDeviceConfigurationTest.cs: New.